tests/fixtures/semantics/invalid/storage_bulk_copy.ora
storage var a: u32;
storage var b: u32;

fn f() -> void {
    a = b; // invalid: storage <- storage bulk copy (element-level required)
}


